<resources>
    <string name="app_name">Terapi.in</string>
    <string name="string_selogan">Mulailah Kehidupan Sehatmu Disini</string>
    <string name="copyright">Copyright 2022 by terapi.in</string>
    <string name="terapi">Terapi.</string>
    <string name="in">in</string>
    <string name="go">Go</string>
    <string name="login">Masuk</string>
    <string name="patient_with_doctor">Patient With Doctor</string>
    <string name="masuk">Halaman Masuk</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="mendaftar">Halaman Daftar</string>
    <string name="e_mail">E-mail</string>
    <string name="alamat">Alamat</string>
    <string name="password">Password</string>
    <string name="nomor_hp">Nomor HP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_pages">Home Pages</string>
    <string name="profil_pages">Profil Pages</string>
    <string name="info_pages">Info Pages</string>
    <string name="about">Info Aplikasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="privasi_dan_polisi">Kebijakan Privasi</string>
    <string name="bantuan">Bantuan</string>
    <string name="username">Username</string>
    <string name="title_activity_camera_page">CameraPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wajah">Wajah</string>
    <string name="pilih_menu_terapi">Pilih Menu Terapi</string>
    <string name="batal">Batal</string>
    <string name="titik_dua">:</string>
    <string name="halaman_menu">Halaman Menu</string>
    <string name="keluar">Keluar</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="kembali">Kembali</string>
    <string name="harus_diisi">Field Harus Diisi</string>
    <string name="upload_image">Upload Image?</string>
    <string name="upload">Upload</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="loading_to_upload">Loading to upload&#8230;</string>
    <string name="sedang_memprediksi">Sedang Memprediksi&#8230;</string>
    <string name="menu_terapi">Menu Terapi</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="selesai">Selesai</string>
    <string name="pose_buka_mulut">Pose Buka Mulut</string>
    <string name="pose_pipi_bengkak">Pose Pipi Bengkak</string>
    <string name="pose_ujuk_gigi">Pose Ujuk Gigi</string>
    <string name="pose_senyum">Pose Senyum</string>
    <string name="pose_setengah_senyum">Pose Setengah Senyum</string>
    <string name="terapi_gerakan_wajah">Terapi Gerakan Wajah</string>
    <string name="_5_pose_latihan">5 pose latihan</string>
</resources>