<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".TerapiMenu">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/terapi_gerakan_wajah"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:translationZ="90dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_5_pose_latihan"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:translationZ="90dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/menu_terapi"
            android:src="@drawable/header_terapi_wajah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/batal"
            android:id="@+id/backButton"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_red" />

        <LinearLayout
            android:id="@+id/camOpenMouth"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pose_buka_mulut"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/pose_buka_mulut"
                app:srcCompat="@drawable/iconopenmouth" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:id="@+id/camPuffCheek"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camOpenMouth">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/pose_pipi_bengkak"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <ImageView
                android:contentDescription="@string/pose_pipi_bengkak"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/iconpuff" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/camShowTeeth"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius_button"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camPuffCheek">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/pose_ujuk_gigi"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <ImageView
                android:contentDescription="@string/pose_ujuk_gigi"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/iconshowteeth" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/camSmile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius_button"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camShowTeeth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pose_senyum"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:contentDescription="@string/pose_senyum"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/iconsmile" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/camSneer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/radius_button"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camSmile">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/pose_setengah_senyum"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <ImageView
                android:contentDescription="@string/pose_setengah_senyum"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/iconsneer" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>